# Aura

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aura/: __init__.py  errors.py
aura/cli/: __init__.py  __main__.py  _coordination.py  attachments.py  buddy.py  buddy_sprites.py  commands.py  completion.py  headless.py  mcp_cli.py  permission.py  permission_bash.py  permission_generic.py  permission_write.py  picker.py  render.py  repl.py  spinner.py  status_bar.py  statusline_hook.py  teammate_entrypoint.py  user_question.py
aura/config/: __init__.py  loader.py  mcp_approvals.py  mcp_store.py  schema.py
aura/core/: __init__.py  abort.py  agent.py  budget.py  context.py  errors.py  events.py  history.py  hooks.py  journal.py  llm.py  logging.py  loop.py  permission.py  project_memory.py  registry.py  retry.py  rules.py  state.py  storage.py  system_prompt.py  todos.py
aura/core/commands/: __init__.py  buddy.py  builtin.py  export.py  git_commands.py  mcp_cmd.py  registry.py  stats.py  tasks.py  team.py  types.py
aura/core/compact/: __init__.py  compact.py  constants.py  microcompact.py  prompt.py
aura/core/hooks/: __init__.py  auto_reload.py  bash_safety.py  budget.py  file_watcher.py  lifecycle.py  logging.py  must_read_first.py  permission.py
aura/core/mcp/: __init__.py  adapter.py  manager.py  types.py
aura/core/memory/: __init__.py  attachments.py  context.py  project_memory.py  rules.py  system_prompt.py
aura/core/permissions/: __init__.py  bash_safety.py  decision.py  defaults.py  denials.py  matchers.py  mode.py  rule.py  rule_hint.py  safety.py  session.py  store.py  subagent_asker.py
aura/core/persistence/: __init__.py  journal.py  storage.py
aura/core/services/: __init__.py  agent_summary.py
aura/core/skills/: __init__.py  command.py  errors.py  loader.py  registry.py  restrict.py  types.py
aura/core/tasks/: __init__.py  agent_types.py  factory.py  run.py  store.py  types.py
aura/core/teams/: __init__.py  mailbox.py  manager.py  runtime.py  types.py
aura/core/teams/backends/: __init__.py  detection.py  in_process.py  pane.py  registry.py  types.py
aura/desktop/: __init__.py  headless.py
aura/schemas/: __init__.py  events.py  permissions.py  state.py  todos.py  tool.py
aura/skills/bundled/code-review/: SKILL.md
aura/skills/bundled/simplify/: SKILL.md
aura/skills/bundled/verify/: SKILL.md
aura/tools/: __init__.py  ask_user.py  base.py  bash.py  bash_background.py  edit_file.py  enter_plan_mode.py  errors.py  exit_plan_mode.py  glob.py  grep.py  mcp_read_resource.py  progress.py  read_file.py  send_message.py  skill.py  task_create.py  task_get.py  task_list.py  task_output.py  task_stop.py  todo_write.py  web_fetch.py  web_search.py  write_file.py
desktop/: .gitignore  README.md
desktop/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/frontend/src/: main.ts  style.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
scripts/: verify_e2e.py  verify_pty_interactive.py  verify_real_llm.py
tests/: conftest.py  test_abort.py  test_agent.py  test_agent_summary.py  test_agent_types.py  test_ask_user.py  test_auto_compact.py  test_auto_memory.py  test_bash.py  test_bash_background.py  test_bash_background_permission.py  test_bash_safety.py  test_bash_safety_hook.py  test_buddy.py  test_buddy_command.py  test_buddy_sprites.py  test_budget.py  test_build_tool.py  test_c1_subagent_permission.py  test_cli_entry.py  test_cli_mcp_subcommand.py  test_cli_permission.py  test_cli_permission_bash.py  test_cli_permission_write.py  test_cli_smoke.py  test_cli_user_question.py  test_command_registry.py  test_commands.py  test_compact.py  test_compact_active_tasks.py  test_compact_circuit_breaker.py  test_compact_command.py  test_compact_model_aware_threshold.py  test_compact_prompt.py  test_compact_ptl_retry.py  test_compact_skill_reinjection.py  test_config_loader.py  test_config_schema.py  test_context.py  test_context_cache.py  (+147 more)
tests/e2e/: __init__.py  test_parity_v0_11.py  test_v14_deep.py
tests/fixtures/config/: invalid.json  invalid.toml  project_override.json  project_override.toml  user_only.json  user_only.toml
tests/integration/: __init__.py  conftest.py  test_concurrent_asks.py  test_mcp_attachments.py  test_mcp_roundtrip.py  test_permission_flow.py  test_pre_tool_decision_merge.py  test_skill_e2e.py  test_subagent_dag.py
