[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aura"]

[project]
name = "aura"
version = "0.7.6"
description = "A general-purpose Python agent with an explicit async loop and LangChain as the LLM client layer."
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "langchain-core >= 1.2, < 2.0",
    "langchain-mcp-adapters >= 0.2, < 1.0",
    "prompt-toolkit >= 3.0",
    "rich >= 13.7",
    "pydantic >= 2.6",
    "pathspec >= 0.12",
    "pyyaml >= 6.0",
]

[project.optional-dependencies]
openai = ["langchain-openai >= 1.1, < 2.0"]
anthropic = ["langchain-anthropic >= 1.4, < 2.0"]
ollama = ["langchain-ollama >= 1.1, < 2.0"]
web = ["ddgs >= 9.14, < 10.0"]
all = [
    "langchain-openai >= 1.1, < 2.0",
    "langchain-anthropic >= 1.4, < 2.0",
    "langchain-ollama >= 1.1, < 2.0",
    "ddgs >= 9.14, < 10.0",
]
dev = [
    "pytest >= 8",
    "pytest-asyncio >= 0.23",
    "pytest-cov",
    "ruff >= 0.4",
    "mypy >= 1.10",
    "types-PyYAML >= 6.0",
]

[project.scripts]
aura = "aura.cli.__main__:main"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["aura.core.*", "aura.config.*", "aura.tools.*"]
strict = true

[[tool.mypy.overrides]]
# Optional LangChain protocol SDKs — only installed via extras; ignore missing stubs.
module = ["langchain_openai", "langchain_anthropic", "langchain_ollama"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra"
